export const snapshot = {};

snapshot[`notes > can list all notes 1`] = `
{
  next_page_token: null,
  notes: [
    {
      associated_person_ids: [],
      content: "Test ***html***

* 1

* 2

* 3",
      created_at: 2024-08-13T10:23:07.846Z,
      creator_id: 54576635,
      id: 20421456,
      interaction_id: null,
      interaction_person_ids: [],
      interaction_type: null,
      is_meeting: false,
      mentioned_person_ids: [],
      opportunity_ids: [],
      organization_ids: [
        297551634,
      ],
      parent_id: null,
      person_ids: [],
      type: 2,
      updated_at: null,
    },
    {
      associated_person_ids: [],
      content: "Test text",
      created_at: 2024-08-13T10:22:45.964Z,
      creator_id: 54576635,
      id: 20421454,
      interaction_id: null,
      interaction_person_ids: [],
      interaction_type: null,
      is_meeting: false,
      mentioned_person_ids: [],
      opportunity_ids: [],
      organization_ids: [
        297551634,
      ],
      parent_id: null,
      person_ids: [],
      type: 2,
      updated_at: null,
    },
  ],
}
`;

snapshot[`page 1 of notes 1`] = `
[
  {
    associated_person_ids: [],
    content: "Test ***html***

* 1

* 2

* 3",
    created_at: 2024-08-13T10:23:07.846Z,
    creator_id: 54576635,
    id: 20421456,
    interaction_id: null,
    interaction_person_ids: [],
    interaction_type: null,
    is_meeting: false,
    mentioned_person_ids: [],
    opportunity_ids: [],
    organization_ids: [
      297551634,
    ],
    parent_id: null,
    person_ids: [],
    type: 2,
    updated_at: null,
  },
]
`;

snapshot[`page 2 of notes 1`] = `
[
  {
    associated_person_ids: [],
    content: "Test text",
    created_at: 2024-08-13T10:22:45.964Z,
    creator_id: 54576635,
    id: 20421454,
    interaction_id: null,
    interaction_person_ids: [],
    interaction_type: null,
    is_meeting: false,
    mentioned_person_ids: [],
    opportunity_ids: [],
    organization_ids: [
      297551634,
    ],
    parent_id: null,
    person_ids: [],
    type: 2,
    updated_at: null,
  },
]
`;

snapshot[`page 3 of notes 1`] = `[]`;
